# Operating_Systems

./: README.md  main.cpp
lab1/: CMakeLists.txt  creator.cpp  employee.h  main.cpp  reporter.cpp
lab2/: CMakeLists.txt  function.cpp  test.cpp
lab4/Receiver/: Receiver.cpp
lab4/Sender/: Sender.cpp
